--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "lucide-react": "^0.575.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
@@ -44,6 +45,6 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "nodemon": "^3.1.14",
-    "vite": "^5.4.8"
+    "vite": "^7.3.1"
   }
 }
